--- a/wiki/PluginWhefs.wiki
+++ b/wiki/PluginWhefs.wiki
@@ -150,17 +150,17 @@ whefs home page. All other features are inherited from the `IODevice` class.
 || `WhEfs` || `new Whefs(IODevice)` || Tries to read the given device as a whefs filesystem. Throws on error. If the device is read-only, no write operations can succeed on the VFS. ||
 || `WhEfs` || `new Whefs(String filename,bool writeMode)` || Tries to read the given file as a whefs filesystem. Throws on error. If `writeMode` is false, access to the VFS will be read-only. ||
 || `void` || `close()` || Closes the VFS. All pseudofiles/devices opened from this object must have been closed by the time is called. ||
-|| `IODevice` || `openDevice(string filename, bool writeMode)` || Opens up a pseudofile within the VFS and returns it as a `whio.IODevice`. If `writeMode` is true then the file is created if it does not exist. Throws on error. The returned IODevice must `close()`ed before the VFS is closed. ||
 || `int` || `dumpToFile(string filename)` || Dumps the VFS's binary image to the given file. Results are undefined if it is told to overwrite itself. ||
+|| `Array` || `ls(string pattern)` || Returns a list (or null) of all pseudofiles matching the given glob-like pattern. Most common glob patterns are accepted, but only one pattern per call. e.g. `print(fs.ls('*.js'))`. ||
+|| `IODevice` || `openDevice(string filename, bool writeMode)` || Opens up a pseudofile within the VFS and returns it as a `whio.IODevice`. If `writeMode` is true then the file is created if it does not exist. Throws on error. The returned IODevice must `close()`ed before the VFS is closed. ||
 || `int` || `unlink(string filename)` || Unlinks (deletes) the given pseudofile name. It will fail if the given file is currently opened. ||
-|| `Array` || `ls(string pattern)` || Returns a list (or null) of all pseudofiles matching the given glob-like pattern. Most common glob patterns are accepted, but only one patter per call. e.g. `print(fs.ls('*.js'))`. ||
 || *Type* || *Properties* (read-only) || *Notes* ||
 || `string` || `fileName` || Only for `WhEfs` objects created via a filename argument. Changing it has no effect on the object. ||
 
 
 TODOs:
 
-  * `ls()` should be able to take more than one pattern. It should also accept a callback function to use to check for a match.
+  * `ls()` should be able to take more than one pattern. It should also accept a callback function to check for a match. We unfortunately have no C++ client-side access to the JS RegExp, so we can't easily support that.
   * Think about how we might integrate [PathFinderClass PathFinder] with whefs, such that !PathFinder would be able to search through a VFS.
 
 ==whefs static functions==
@@ -180,13 +180,9 @@ which may have these optional properties:
   * `blockSize`
   * `filenameLength`
 
-Each is described on the whefs-mkfs page.
+Each is described on the [http://fossil.wanderinghorse.net/repos/whefs/index.cgi/wiki/whefs-mkfs whefs-mkfs page].
 
 As a special service to caring users, `mkfs()` supports the
 pseudofilename `":memory:"`, which means to build the VFS in memory. When
 the returned `WhEfs` object is closed (or garbage collected), the
-filesystem will be lost.
-
-TODO: add `whio_dev_copy()` (or similar) to the JS API so that it is
-possible to copy the VFS from memory to disk. Copying it via JS will
-not work because it contains binary data.
+filesystem will be lost. The in-memory can be copied to disk using `dumpToFile()`.
