--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -12,6 +12,7 @@ http://code.google.com/p/v8-juice/source/browse/
 *2009 March 21*
   * Started adding `ToSource()` to convert native types to JS source code. Has some notable limitations but basically works.
   * Added gzip/gunzip support for [PluginWhio input streams].
+  * Added [PluginWhefs embedded filesystem plugin].
 
 ==2009 March 18==
   * Released new tarball
