--- a/wiki/PluginNCurses.wiki
+++ b/wiki/PluginNCurses.wiki
@@ -3,6 +3,8 @@
 
 *ACHTUNG:* this plugin was broken as a side effect of recent v8-juice API changes, and is being completely rewritten.
 
+<wiki:toc max_depth='3'/>
+
 =About=
 
 The ncurses bindings wrap up a great deal of the ncurses API for use in JavaScript. Instead
@@ -46,16 +48,25 @@ This plugin installs the following items:
   * The `NCPanel` approximates an ncurses `PANEL` handle.
   * The `NCPad` somewhat approximates an ncurses `PAD` handle.
 
+==Error Reporting==
+
+Most error codes used by curses are integers with the value `ERR` for failure,
+and non-ERR on success (honestly, that's what the curses standard specifies).
+In practice, non-ERR is simply `OK`, which is 0.
+
+Many errors are reported via exceptions, either because they come from the
+JS side of the bindings (as opposed to being an ncurses error value) or because
+they inherit that behaviour from the underlying C++ wrapper (which throws for
+a number of error cases).
+
 =The `ncurses` Object=
 
 This plugin installs an object called `ncurses` which holds all of the classes and
 a few non-class functions:
 
-
 || *Return type* || *Name/Arguments* || *Notes* ||
-|| `int` || `endwin()` || Never call unless absolutely necessary - forcibly exits curses mode without cleaning up resources. ||
-|| `int` || `color_pair(string fg, string bg)` || Takes foreground/background color names (can insensitive) and return the equivalent curses color attributes. ||
-|| `int` || `color_pairnum(string fg, string bg)` || Like `color_pair()`, but returns a curses color pair number, which is only very rarely useful or needed. ||
+|| `int` || `color_pair(string fg, string bg)` || Takes foreground/background color names (can insensitive) and return the equivalent curses color attributes. Color names are: black, red, green, yellow, blue, magenta, cyan, white. They can normally be OR'd together with `ncurses.A_BOLD` to get a brighter foreground color. ||
+|| `int` || `color_pairnum(string fg, string bg)` || Like `color_pair()`, but returns a curses _color pair_ number, which is only very rarely useful or needed. ||
 || `int` || `KEY_F(int)` || Equivalent to the `KEY_F()` native macro. ||
 || `int` || `intVal( string )` || Returns the ascii integer value of the first character in the given string ||
 || `int` || `charVal(int)` || If the given int is in the inclusive range of 0-127, it returns the ASCII character (as a string), otherwise it returns undefined. ||
@@ -66,7 +77,7 @@ a few non-class functions:
 || `int` || `getch()` || Similar, but not identical, to `NCWindow.getch()`. In theory they are indentical, but in practice the latter has no refresh side-effects, whereas the former sometimes does. ||
 || `int` || `curs_set(int)` || Sets the cursor to invisible, half-visible, or fully visible, depending on whether the argument is 0, 1, or 2, respectively ||
 || `int` || `napms(int )` || Sleeps for the given number of milliseconds. ||
-
+|| `int` || `endwin()` || Never call unless absolutely necessary - forcibly exits curses screen mode without cleaning up resources. ||
 
 =NCWindow Class=
 
@@ -76,13 +87,17 @@ windows.
 
 ==Member Function List==
 
-These functions are listed, but not documented, here. Most of these
-functions map 1-to-1 with ncurses functions of the same name, and are
+Of this functions are not documented here. They mostly map 1-to-1 with
+ncurses functions of the same (or very similar) names, and are
 described in great detail in the ncurses man pages. That also explains
 why their names are so cryptic and do not follow common JavaScript
 naming conventions. The exceptions to the documentation rule are
 functions which are unique to this API or, for reasons of argument
 passing conventions, function differently than in the C API.
+
+Some functions which are overloaded in the native C++ API instead
+have several variants with slightly different names (all conforming
+to common curses naming conventions). e.g. `getch()` vs `mvgetch()`.
 
 Here we go...
 
@@ -91,7 +106,9 @@ Here we go...
 || `NCWindow` || `new NCWindow(NCWindow [, bool box=true])` || Creates a subwindow of the given window, completely wrapping it with a 1-line/col border. If box is true, the border is decorated. Throws on error. ||
 || `NCWindow` || `new NCWindow(int lines, int cols, int y, int x)` || Creates a new wind with the given size/position. Throws on error. ||
 || `NCWindow` || `new NCWindow(NCWindow parent, int lines, int cols, int y, int x)` || Creates a subwindow of the given window, with coordinates relative to that window. ||
+|| `void` || `close()` || Closes/destroys this windows. The object cannot be used after this is called. || 
 || `string` ||  `name()` || ||
+|| `void` || `setName(string)` || ||
 || `int` ||  `lines()` || ||
 || `int` ||  `cols()` || ||
 || `int` ||  `tabsize()` || ||
@@ -122,7 +139,6 @@ Here we go...
 || `int` ||  `refresh()` || ||
 || `int` ||  `noutrefresh()` || ||
 || `bool` ||  `has_mouse()` || ||
-|| `void` || `setName(string)` || ||
 || `int` || `insch(int)` || ||
 || `int` || `insdelln(int)` || ||
 || `int` || `insstr(string)` || ||
@@ -160,11 +176,10 @@ Here we go...
 || `int` || `mvaddstrn( int, int, string,int )` || ||
 || `int` || `mvaddstrn( int, int, string,int )` || ||
 || `int` || `mvinsstrn( int,int,string,int )` || ||
-|| `int` || `mvcur( int,int,int,int )` || ||
+|| `int` || `mvcur( int,int,int,int )` || Low-level cursor movement. ||
 || `void` || `captureCout()` || Redirects the `std::cout` object to this window until the window is closed or `captureReset()` is called. ||
 || `void` || `captureCerr()` || Redirects the `std::cerr` object to this window until the window is closed or `captureReset()` is called. ||
 || `void` || `captureReset()` || Undoes stream capturing enabled with `captureCout()` and `captureCerr()`, revering `cout` and/or `cerr` to their previous state. ||
-|| `void` || `close()` || Closes/destroys this windows. The object cannot be used after this is called. || 
 || `int` || `getch()` || ||
 
 
@@ -174,12 +189,57 @@ TODOs:
 
 =NCPanel Class=
 
-TODO: document
+NCPanel is analogous to the curses `PANEL` type. It is basically a top-level window widget
+which can be stacked with other panels and moved around (both of which are problematic
+with non-panel windows).
 
+In addition to the NCWindow API, NCPanel has:
+
+|| *Return type* || *Name/Arguments* || *Notes* ||
+|| `NCPanel` || `new NCPanel()` || A top-level panel. ||
+|| `NCPanel` || `new NCPanel(int lines, int cols [, int y=0, int x=0])` || Creates a new panel at the given position. A window can be wrapped around it with `new NCWindow(myPanel)`. ||
+|| `void` || `hide()` || Hides the panel ||
+|| `void` || `show()` || Shows the panel ||
+|| `void` || `top()` || Moves the panel to the top of the stack. ||
+|| `void` || `bottom()` || Moves the panel to the bottom of the stack. ||
+|| `bool` || `hidden()` || Returns true if the panel is hidden. ||
+|| `int` || `mvwin()` || Moves the panel ||
+
+Some methods are overridden to accommodate for the slightly differing update/refresh
+conventions between windows and panels.
 
 =NCPad Class=
 
-TODO: document
+NCPad is another NCWindow subclass wrapping the very unusual ncurses
+PAD type.  Pads are windows which may be larger than the
+screen (normal curses windows cannot be out of the screen
+bounds). They have some very intricate refreshing rules and are
+difficult to use properly (at least in my experience). They are, however,
+very useful in creating scrollable areas.
+
+NCPad deserves much more documentation than is given here. Maybe someday. Until then...
+
+|| *Return type* || *Name/Arguments* || *Notes* ||
+|| `NCPad` || `new NCPad(NCWindow windowToWrap, int lines, int cols)` || Creates a new pad of the given size (which may be bigger than the screen). The given window is used as the drawing surface. ||
+
+|| `int` ||`requestOp(int)` || Detailed in the native API. ||
+|| `int` || `prefresh(six integers)` || Same as ncurses `prefresh()` ||
+|| `int` || `pnoutrefresh(six integers)` || Same as ncurses `pnoutrefresh()` ||
+|| `int` || `lineCount()` || Number of lines in the pad. ||
+|| `int` || `columnCount()` || Number of columns in the pad. ||
+|| `bool` || `consumeKey(int)` || See the native API ||
+|| `void` || `mapKeyToReq(int key, int requestID)` || ||
+|| `int` || `reqForKey(int key)` || ||
+|| `int` || `echochar(int ch)` || ||
+|| `void` || `inputLoop()` || Starts a local input loop. Pressing the arrow/page keys scrolls the pad and Ctrl-W or F10 stops the loop. ||
+|| `int` || `refresh() || Reimplemented to take no args (as for NCWindow) or 6 args (equivalent to `prefresh()`) ||
+|| `int` || `noutrefresh()` || Reimplemented to accept no args (as for NCWindow) or 6 args (equivalent to `pnoutrefresh()`) ||
+
+
+=Examples=
+
+It's hard to make short/concince examples for curses. i'll try to get
+some written up at some point.
 
 
 =Tips and Tricks=
