--- a/wiki/PluginNCurses.wiki
+++ b/wiki/PluginNCurses.wiki
@@ -7,7 +7,7 @@
 
 =About=
 
-The ncurses bindings wrap up a great deal of the ncurses API for use in JavaScript. Instead
+The ncurses bindings wrap up a great deal of the ncurses API for use in !JavaScript. Instead
 of providing an API directly compatible with the low-level C API (as earlier versions)
 of this plugin did), it provides an object-oriented interface. This is much easier to
 manage, in terms of window ownership, subwindows, etc., than the low-level interface. Nonetheless,
@@ -17,7 +17,7 @@ it is still curses at heart, and "cant ake some getting used to."
 The advantages of writing curses apps in JS instead of C include:
 
   *  MUCH faster development of curses UIs, as the whole compile/link cycle goes away.
-  *  The event model of curses (keypress) ties in very well with JavaScript, where it is trivial to bind the keypresses to event handlers.
+  *  The event model of curses (keypress) ties in very well with !JavaScript, where it is trivial to bind the keypresses to event handlers.
 
 TODOs:
   *  lots more testing, in particular with the PANEL/PAD APIs.
@@ -27,6 +27,10 @@ ncurses features i have no plans for implementing:
   *  The FORMS and MENU sub-libraries will not be implemented.
   *  Terminal resize handling. That's a can of worms i don't want to open.
   *  The wide-char ncurses API. Maybe someday, but not soon.
+
+==Source Code==
+
+http://code.google.com/p/v8-juice/source/browse/extra-plugins/src/ncurses-oo
 
 ==History==
 
@@ -68,6 +72,7 @@ a few non-class functions:
 || `int` || `color_pair(string fg, string bg)` || Takes foreground/background color names (can insensitive) and return the equivalent curses color attributes. Color names are: black, red, green, yellow, blue, magenta, cyan, white. They can normally be OR'd together with `ncurses.A_BOLD` to get a brighter foreground color. ||
 || `int` || `color_pairnum(string fg, string bg)` || Like `color_pair()`, but returns a curses _color pair_ number, which is only very rarely useful or needed. ||
 || `int` || `KEY_F(int)` || Equivalent to the `KEY_F()` native macro. ||
+|| `int` || `KEY_CTRL(int | char)` || Returns the ASCII value of the given integer or character, bitwise anded with 0x1f, or undefined if the value is not in the inclusive range 0-127. ||
 || `int` || `intVal( string )` || Returns the ascii integer value of the first character in the given string ||
 || `int` || `charVal(int)` || If the given int is in the inclusive range of 0-127, it returns the ASCII character (as a string), otherwise it returns undefined. ||
 || `int` || `screenHeight()` || Height of the terminal, in text rows. Not valid until in curses mode. ||
@@ -78,6 +83,8 @@ a few non-class functions:
 || `int` || `curs_set(int)` || Sets the cursor to invisible, half-visible, or fully visible, depending on whether the argument is 0, 1, or 2, respectively ||
 || `int` || `napms(int )` || Sleeps for the given number of milliseconds. ||
 || `int` || `endwin()` || Never call unless absolutely necessary - forcibly exits curses screen mode without cleaning up resources. ||
+|| `int` || `echo([bool = true])` || If passed true, tells curses to echo all keypresses, otherwise keypresses are not echoed. This is off by default but should be turned on when using `NCWindow.getstr()` (or similar). ||
+|| `int` || `noecho()` || Equivalent to `echo(false)`. ||
 
 =NCWindow Class=
 
@@ -90,7 +97,7 @@ windows.
 Of this functions are not documented here. They mostly map 1-to-1 with
 ncurses functions of the same (or very similar) names, and are
 described in great detail in the ncurses man pages. That also explains
-why their names are so cryptic and do not follow common JavaScript
+why their names are so cryptic and do not follow common !JavaScript
 naming conventions. The exceptions to the documentation rule are
 functions which are unique to this API or, for reasons of argument
 passing conventions, function differently than in the C API.
@@ -120,7 +127,6 @@ Here we go...
 || `int` ||  `maxy()` || ||
 || `int` ||  `inch()` || ||
 || `int` ||  `insertln()` || ||
-|| `int` ||  `getbkgd()` || ||
 || `int` ||  `erase()` || ||
 || `int` ||  `clear()` || ||
 || `int` ||  `clrtobot()` || ||
@@ -146,7 +152,9 @@ Here we go...
 || `int` || `attroff(int)` || ||
 || `int` || `attrset(int)` || ||
 || `int` || `color_set(int)` || Don't use this. Use `ncurses.color_pair()` instead - much easier. ||
-|| `int` || `bkgd(int)` || ||
+|| `int` || `bkgd(int)` || Immediately changes the window's whole background to the given attributes. ||
+|| `void` || `bkgdset(int)` || Similar to `bkgd()`, but does not apply to the whole window. The man pages are seriously lacking on this one. ||
+|| `int` ||  `getbkgd()` || Fetches the background attributes. ||
 || `int` || `clearok(bool)` || ||
 || `int` || `scroll(int)` || ||
 || `int` || `scrollok(bool)` || ||
@@ -177,15 +185,17 @@ Here we go...
 || `int` || `mvaddstrn( int, int, string,int )` || ||
 || `int` || `mvinsstrn( int,int,string,int )` || ||
 || `int` || `mvcur( int,int,int,int )` || Low-level cursor movement. ||
-|| `void` || `captureCout()` || Redirects the `std::cout` object to this window until the window is closed or `captureReset()` is called. ||
-|| `void` || `captureCerr()` || Redirects the `std::cerr` object to this window until the window is closed or `captureReset()` is called. ||
-|| `void` || `captureReset()` || Undoes stream capturing enabled with `captureCout()` and `captureCerr()`, revering `cout` and/or `cerr` to their previous state. ||
-|| `int` || `getch()` || ||
+|| `void` || `captureCout([int attributes])` || Redirects the `std::cout` object to this window until the window is closed or `captureReset()` is called. If the attributes argument is set, the output from that stream is colored using those attributes. ||
+|| `void` || `captureCerr()` || Same as `captureCout()`, but applies to the native `std::cerr` object. ||
+|| `void` || `captureReset()` || Undoes stream capturing enabled with `captureCout()` and `captureCerr()`, revering `cout` and/or `cerr` to their previous states. ||
+|| `int` || `getch()` || Waits for a keypress and returns its key code. ||
+|| `string` || `getstr([int maxlen])`, `getstr(int y, int x [, int maxlen])` || Reads up to maxlen (or some arbitrarily chosen limit) characters from the window. ||
 
 
 TODOs:
   * organize these by category.
   * Implement the input-related functions (they require special handling due to (`char *`) usage).
+  * Implement `ripoffline()`.
 
 =NCPanel Class=
 
@@ -193,17 +203,19 @@ NCPanel is analogous to the curses `PANEL` type. It is basically a top-level win
 which can be stacked with other panels and moved around (both of which are problematic
 with non-panel windows).
 
+==Member Function List==
+
 In addition to the NCWindow API, NCPanel has:
 
 || *Return type* || *Name/Arguments* || *Notes* ||
 || `NCPanel` || `new NCPanel()` || A top-level panel. ||
-|| `NCPanel` || `new NCPanel(int lines, int cols [, int y=0, int x=0])` || Creates a new panel at the given position. A window can be wrapped around it with `new NCWindow(myPanel)`. ||
+|| `NCPanel` || `new NCPanel(int lines, int cols [, int y=0, int x=0])` || Creates a new panel at the given position. A window can be wrapped around it with `new NCWindow(myPanel)`. Throws on error. ||
 || `void` || `hide()` || Hides the panel ||
 || `void` || `show()` || Shows the panel ||
 || `void` || `top()` || Moves the panel to the top of the stack. ||
 || `void` || `bottom()` || Moves the panel to the bottom of the stack. ||
 || `bool` || `hidden()` || Returns true if the panel is hidden. ||
-|| `int` || `mvwin()` || Moves the panel ||
+|| `int` || `mvwin(int y, int x)` || Moves the panel ||
 
 Some methods are overridden to accommodate for the slightly differing update/refresh
 conventions between windows and panels.
@@ -211,41 +223,173 @@ conventions between windows and panels.
 =NCPad Class=
 
 NCPad is another NCWindow subclass wrapping the very unusual ncurses
-PAD type.  Pads are windows which may be larger than the
-screen (normal curses windows cannot be out of the screen
-bounds). They have some very intricate refreshing rules and are
-difficult to use properly (at least in my experience). They are, however,
-very useful in creating scrollable areas.
+PAD type.  Pads are windows which may be larger than the screen
+(normal curses windows cannot be out of the screen bounds). They have
+some very intricate refreshing rules and are difficult to use properly
+(at least in my experience). They are, however, very useful in
+creating scrollable areas. Unlike normal curses pads, these pads
+automatically draw a scrollbars border around themselves. This may
+make them less useful for creating scrollable menus, but in the
+general case it makes them much simpler to use.
+
+==Member Function List==
+
 
 NCPad deserves much more documentation than is given here. Maybe someday. Until then...
+
+Aside from the NCWindow API (not all of which is strictly legal for a
+pad!), NCPad also provides:
+
 
 || *Return type* || *Name/Arguments* || *Notes* ||
 || `NCPad` || `new NCPad(NCWindow windowToWrap, int lines, int cols)` || Creates a new pad of the given size (which may be bigger than the screen). The given window is used as the drawing surface. ||
 
 || `int` ||`requestOp(int)` || Detailed in the native API. ||
-|| `int` || `prefresh(six integers)` || Same as ncurses `prefresh()` ||
+|| `int` || `prefresh(six integers)` || Same as ncurses `prefresh()`. ||
 || `int` || `pnoutrefresh(six integers)` || Same as ncurses `pnoutrefresh()` ||
 || `int` || `lineCount()` || Number of lines in the pad. ||
 || `int` || `columnCount()` || Number of columns in the pad. ||
-|| `bool` || `consumeKey(int)` || See the native API ||
-|| `void` || `mapKeyToReq(int key, int requestID)` || ||
-|| `int` || `reqForKey(int key)` || ||
-|| `int` || `echochar(int ch)` || ||
+|| `bool` || `consumeKey(int)` || Tries to process a keypress, returning true if it can. See the native API. ||
+|| `void` || `mapKeyToReq(int key, int requestID)` || See the list of `PadReq` vars below. This function maps key IDs to "pad requests", such that `inputLoop()` will react to them. ||
+|| `int` || `reqForKey(int key)` || Returns a `PadReq` value (see below) corresponding to the given key. ||
+|| `int` || `echochar(int ch)` || Outputs a single character and refreshes the pad immediately. ||
 || `void` || `inputLoop()` || Starts a local input loop. Pressing the arrow/page keys scrolls the pad and Ctrl-W or F10 stops the loop. ||
 || `int` || `refresh() || Reimplemented to take no args (as for NCWindow) or 6 args (equivalent to `prefresh()`) ||
 || `int` || `noutrefresh()` || Reimplemented to accept no args (as for NCWindow) or 6 args (equivalent to `pnoutrefresh()`) ||
 
+The NCPad class also has the following shared symbolic contants, all
+of which are numeric and all of which are accepted as arguments to the
+`requestOp()` and `mapKeyToReq()` member functions. The native API
+(documented in
+[http://code.google.com/p/v8-juice/source/browse/extra-plugins/src/ncurses-oo/ncwindow.hpp ncwindow.hpp])
+goes into much more detail about these.
 
-=Examples=
+|| *Name* || *Notes* ||
 
-It's hard to make short/concince examples for curses. i'll try to get
-some written up at some point.
+|| `PadReqFirstRequest` || Last request type in the list, for use in loops. ||
+|| `PadReqRefresh` || Triggers a refresh operation. ||
+|| `PadReqUp` || Scroll one line up. ||
+|| `PadReqDown` || Scroll one line down. ||
+|| `PadReqLeft` || Scroll left. ||
+|| `PadReqRight` || Scroll right. ||
+|| `PadReqExit` || End input loop. ||
+|| `PadReqPageUp` || Page up. ||
+|| `PadReqPageDown` || Page down ||
+|| `PadReqScrollToTop` || Scrolls to the top. ||
+|| `PadReqScrollToBottom` || Scrolls to the bottom. ||
+|| `PadReqIgnored` || An ignored request. Don't remember what this is for. ||
+|| `PadReqUnknown` || Used by `reqForKey()` to report an unknown event. ||
+|| `PadReqLastRequest` || Last request type in the list, for use in loops. ||
 
+TODOs:
+  * The ability to map keys/`PadReq`s to a function might be interesting.
 
 =Tips and Tricks=
 
 General tips include:
 
+  * Remember that ncurses uses backwards coordinates: (y,x) instead of (x,y)
   * Never use stdscr, a window the size of the screen, or overlapping windows at all. They're problematic to draw correctly. Use NCPanel objects to partition off your main working space, and use sub-windows within the panels to further organize.
   * NCPad is weird. Just plain weird. It takes lots of study to get it to do what you want it to.
   * The `NCWindow.captureCout()` and `captureCerr()` methods should always be matched with `captureReset()`, or else "good luck!"
+
+==Sending debugging output to another console==
+
+Any output to the console from non-curses methods (e.g. `print()`) may
+hose the screen state. If you want to send debugging output to a separate
+console, open that console and type `tty`. That will give a device name,
+like `/dev/pts/4`. From your terminal where you're running ncurses
+code, you can then do:
+
+{{{
+~> v8-juice-shell myScript.js 2>/dev/pts/4 # adjust that value, of course!
+}}}
+
+and the output which is intended for `std::cerr` will then go to that console.
+
+Alternately, you can use `NCWindow.captureCerr()`, but that will only
+work if all client debugging code uses the `std::cerr` object for
+debug output (as opposed to using `fprintf(stderr,...)` or similar). When
+using both `captureCerr()` and `captureCout()` on the same window it is
+sometimes useful to pass color attributes to one or both of the streams
+so that their output looks different:
+
+{{{
+mywin.captureCout(); // cout will use mywin's current colors
+mywin.captureCerr( ncurses.color_pair('red','black') | ncurses.A_BOLD );
+...
+mywin.captureReset(); // restores cout/cerr to their previous states
+}}}
+
+=Examples=
+
+It's hard to make _short_/_concise_ examples for curses. i'll try to get
+some written up at some point. Until then...
+
+==NCPanel/NCPad Example==
+
+Most of my curses UIs use panels as the primary UI widgets, and then
+i add the app-specific widgets to those. i never touch stdscr, and instead
+do everything on panels. This saves a lot of hassle when it comes to moving
+windows and refreshing overlapping windows. For example, using a screen-sized
+panel as the "root window" overcomes screen corruption problems which we
+see when we have panels on top of stdscr and use stdscr for output.
+
+Here's an example:
+
+{{{
+load_plugin('v8-juice-ncurses-oo');
+var nc = ncurses;
+nc.curs_set(0);
+var root = new nc.NCPanel();
+root.attrset( nc.color_pair('white','red') );
+root.mvaddstr(4,0,"I am the root panel.");
+root.captureCout();
+root.captureCerr();
+print("std::cout is redirected here.");
+function tryPad()
+{
+    try
+    {
+        var pnl = new nc.NCPanel(10,30,3,3);
+        print('new child =',pnl.name());
+        pnl.scrollok(true);
+        pnl.bkgd( nc.intVal(' ') | nc.color_pair('white','blue') );
+
+        var pad = new nc.NCPad(pnl,100,100);
+        print("Wrapper pad added.");
+        pad.bkgd( nc.intVal(' ') | nc.color_pair('blue','white') | ncurses.A_BIM );
+        pad.mapKeyToReq( ncurses.KEY_CTRL('G'), ncurses.NCPad.PadReqExit );
+        pad.scrollok(true);
+        cn = pad.name();
+        for( var i = 0; i < 5; ++i )
+        {
+            pad.addstr("#"+i+": This is window "+cn+"\n");
+        }
+        pad.addstr("Going into input loop.\nTry scrolling.\nTap Ctrl-G to stop.\n");
+        pnl.refresh();
+        pad.inputLoop();
+        pad.addstr("Input loop finished.");
+        pad.refresh();
+        print("Now tap a key to destroy these objects.");
+        ncurses.beep();
+        pnl.getch();
+        pad.close();
+        pnl.close();
+    }
+    catch(e)
+    {
+        for( var i = 0; i < 5; ++i ) ncurses.beep();
+        print("exception:",e);
+    }
+}
+
+tryPad();
+root.refresh();
+print("All done. Tap a key to quit.");
+ncurses.beep();
+var rc = root.getch();
+root.close();
+print("Done! :-D");
+
+}}}
